<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_boards"
            android:icon="@drawable/boards"
            android:title="@string/menu_boards" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/account"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/register"
                android:title="@string/register" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/exit"
                android:title="@string/menu_logout" android:visible="false" />
        </menu>
    </item>

</menu>
