...
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/register_button"
                    style="@style/base_button"
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="?attr/colorButtonNormal"
                    android:outlineProvider="background"
                    android:text="@string/btn_register"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/login_button"
                    style="@style/base_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/menu_login" />
            </LinearLayout>
...
